--- a/test/fixtures/boards.yml
+++ b/test/fixtures/boards.yml
@@ -9,3 +9,15 @@ two:
   name: MyString
   title: MyString
   body: MyText
+# == Schema Information
+#
+# Table name: boards
+#
+#  id         :integer(4)      not null, primary key
+#  name       :string(255)
+#  title      :string(255)
+#  body       :text(65535)
+#  created_at :datetime        not null
+#  updated_at :datetime        not null
+#
+
